[gd_scene load_steps=2 format=3 uid="uid://dpow5a5xbnwgr"]

[ext_resource type="Script" path="res://scripts/ui/power_grid_repair_ui.gd" id="1_repair"]

[node name="PowerGridRepairUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_repair")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "POWER GRID REPAIR"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Drag pieces to connect the green source to the orange target"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="InventoryContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 15

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
visible = false
text = "System Offline"
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Reset"
theme_override_font_sizes/font_size = 16

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Close"
theme_override_font_sizes/font_size = 16

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonContainer/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_pressed"]